--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,8 +6,11 @@ env:
 APP_NAME: "output"
 BUILD_ENV : "prod"
 
+
 phases:
     install:
+        runtime-versions:
+            nodejs: 8
         commands:
         # Download and Install NodeJS 8.0
         - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
