--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,7 +13,7 @@ phases:
             nodejs: 8
         commands:
         # Download and Install NodeJS 8.0
-        - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+        - curl -sL https://deb.nodesource.com/setup_8.0 | sudo -E bash -
         - sudo apt-get install -y nodejs
         - echo Installing source NPM dependencies...
         # Install http drivers for node
