--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,8 +1,8 @@
 version: 0.2
 env:
     variables:
-        S3_BUCKET: {arush-testing-angular}
-        BUILD_FOLDER: {output}
+        S3_BUCKET: "arush-testing-angular"
+        BUILD_FOLDER: "output"
         BUILD_ENV: "prod"
 phases:
     install:
