--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,6 +6,8 @@ env:
         BUILD_ENV: "prod"
 phases:
     install:
+    runtime-versions:
+            nodejs: 8
         commands:
             - echo Installing source NPM dependencies...
             - npm install
