--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,8 +6,9 @@ env:
         BUILD_ENV: "prod"
 phases:
     install:
-    runtime-versions:
-            nodejs: 8
+        runtime-versions:
+            - echo Installing source NPM dependencies new...
+            nodejs: 8.0
         commands:
             - echo Installing source NPM dependencies...
             - npm install
