--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,26 +1,22 @@
 version: 0.2
 env:
     variables:
+        
         S3_BUCKET: "arush-testing-angular"
         BUILD_FOLDER: "output"
         BUILD_ENV: "prod"
 phases:
-    install:
-        runtime-versions:
-            - echo Installing source NPM dependencies new...
-            nodejs: 8.0
-        commands:
-            - echo Installing source NPM dependencies...
-            - npm install
-            - npm install -g @angular/cli
-    build:
-        commands:
-            - echo Build started on `date`
-            - ng build --${BUILD_ENV}
-    post_build:
-         commands:
-            - aws s3 cp ${BUILD_FOLDER} s3://${S3_BUCKET} --recursive --acl public-read 
-            - echo Build completed on `date`
+  install:
+    runtime-versions:
+      nodejs: 8
+    commands:
+      - npm install -g @angular/cli
+  build:
+    commands:
+      - ng build --configuration=$BUILD_ENV --build-optimizer
+  post_build:
+    commands:
+      - aws s3 sync dist/ s3://$BUCKET_NAME --delete
 artifacts:
     files:
         - '**/*'
