--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,12 +8,12 @@ env:
 phases:
   install:
     runtime-versions:
-      nodejs: 8
+      nodejs: 10
     commands:
       - npm install -g @angular/cli
   build:
     commands:
-      - ng build --configuration=$BUILD_ENV --build-optimizer
+      - ng build --$$BUILD_ENV
   post_build:
     commands:
       - aws s3 sync dist/ s3://$BUCKET_NAME --delete
