--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,7 +13,7 @@ phases:
       - npm install -g @angular/cli
   build:
     commands:
-      - ng build --$$BUILD_ENV
+      - ng build --$BUILD_ENV
   post_build:
     commands:
       - aws s3 sync dist/ s3://$BUCKET_NAME --delete
