--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,6 +10,7 @@ phases:
     runtime-versions:
       nodejs: 10
     commands:
+      - npm install --save-dev @angular-devkit/build-angular
       - npm install -g @angular/cli
   build:
     commands:
