--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,7 +1,7 @@
 version: 0.2
 env:
     variables:
-        S3_BUCKET: "arush-testing-angular"
+        S3_BUCKET: "angulartesting2"
         BUILD_ENV: "prod"
 phases:
   install:
