--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,8 +1,9 @@
 version: 0.2
 env:
     variables:
-        S3_BUCKET: "angulartesting2"
+        S3_BUCKET: "lastthistime"
         BUILD_ENV: "prod"
+        FOLDER   : "last-pipeline"
 phases:
   install:
     runtime-versions:
@@ -16,7 +17,7 @@ phases:
       - ng build --$BUILD_ENV
   post_build:
     commands:
-      - aws s3 cp dist s3://$S3_BUCKET --recursive
+      - aws s3 cp dist s3://$S3_BUCKET//$FOLDER --recursive
 artifacts:
     files:
         - '**/*'
