--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -17,7 +17,7 @@ phases:
       - ng build --$BUILD_ENV
   post_build:
     commands:
-      - aws s3 cp dist s3://$S3_BUCKET --recursive
+      - aws s3 cp dist s3://$S3_BUCKET --recursive --delete
 artifacts:
     files:
         - '**/*'
