--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -18,7 +18,7 @@ phases:
 
   post_build:
     commands:
-      - aws s3 sync dist s3://$S3_BUCKET --recursive --delete
+      - aws s3 sync dist s3://$S3_BUCKET --recursive 
 
 artifacts:
     files:
